Closed Bug 1116469 Opened 10 years ago Closed 10 years ago

Video trailers are playing upside down on imdb.com on the Sony Xperia Z2

Categories

(Firefox for Android Graveyard :: Audio/Video, defect)

37 Branch
ARM
Android
defect
Not set
normal

Tracking

(firefox34 affected, firefox35 affected, firefox36 affected, firefox37 affected, fennec+)

RESOLVED FIXED
Firefox 38
Tracking Status
firefox34 --- affected
firefox35 --- affected
firefox36 --- affected
firefox37 --- affected
fennec + ---

People

(Reporter: csuciu, Assigned: snorp)

References

()

Details

Attachments

(1 file)

Nightly 37.0a1 (2014-12-30) Go to www.imdb.com and play a movie trailer while device is in portrait mode Result: The video is played upside down So far, I was able to reproduce this issue only on Sony Xperia Z2 10.1" (Android 4.4.4) while device is in portrait mode. See video: http://youtu.be/7AMTonIGC88
Only on IMDB? What about other media tests? Inspecting their player should show the reason for this easily.
Component: General → Audio/Video
Summary: Video trailers are playing upside down on imdb.com → Video trailers are playing upside down on imdb.com on the Sony Xperia Z2
tracking-fennec: --- → ?
I can reproduce this on my personal phone (LG G2, similar hardware to Nexus 5).
Pretty sure this is caused by bug 1100699
Blocks: 1100699
Might be two different bugs here (one specific to IMDB/Xperia) the rest due to a Graphics regression, but I can only reproduce the MP4 video flip on trunk. Catalin, can you re-check why you marked everything affected.
The IMDB issue affects all branches. The issue reported in bug #1117777 reproduces only on Nightly. Other branches are not affected.
No longer blocks: 1100699
Just saw this on ebaumsworld. Nightly 37, Android 4.4, HTC One m7. http://www.ebaumsworld.com/video/watch/84404836/
Assignee: nobody → snorp
tracking-fennec: ? → +
Is this still reproducible with bug 1117777 fixed?
Flags: needinfo?(catalin.suciu)
Yes, this is still reproducible on the latest Nightly (2015-01-11) and on all other branches
Flags: needinfo?(catalin.suciu)
This is working for me, even specifically on the Sony Z2 tablet. Do you guys have Flash installed? Do you see the normal HTML5 video controls?
Flags: needinfo?(rnewman)
Flags: needinfo?(catalin.suciu)
I'm still able to reproduce this on Sony Z2 10.1" (4.4.4). The videos are Flash (Flash is installed and there are no HTML5 video controls). As mentioned in comment #0 this is reproducible only when playing videos in portrait mode.
Flags: needinfo?(catalin.suciu)
OK, I can reproduce on the Z2, with Flash, in portrait. This is very strange.
Flags: needinfo?(rnewman)
I am not really sure how this ever worked to begin with, but it's clearly busted now that bug 1100699 landed.
Attachment #8555256 - Flags: review?(gpascutto)
Actually if this really is in all releases, bug 1100699 has nothing to do with it. I would say 1037147 may be at fault.
No longer blocks: 1100699
I've just installed the Nightly from 2014-04-01 and the issue is still there. This is not a recent regression.
Comment on attachment 8555256 [details] [diff] [review] Correctly orient Android Flash video surfaces Review of attachment 8555256 [details] [diff] [review]: ----------------------------------------------------------------- HoneyComb FTW.
Attachment #8555256 - Flags: review?(gpascutto) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 38
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: