Bug 1116469 - Correctly orient Android Flash video surfaces r=gcp